--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <!-- Press -->
 
     <section class="colored-section" id="press">
-      <img class="pressimg" src="images/TechCrunch.png" alt="tc-logo" />
+      <img class="pressimg" src="images/techcrunch.png" alt="tc-logo" />
       <img class="pressimg" src="images/tnw.png" alt="tnw-logo" />
       <img
         class="pressimg"
